--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Dynamic documents tutorial
-description: Training materials for creating reproducible documents containing code chunks, mathematical notation, simple text, and more. See the top menu for example formats.
+description: Training materials for creating reproducible documents containing code chunks, mathematical notation, simple text, and more. See the left sidebar for example formats.
 show_downloads: true
 logo: assets/img/logo.svg
